--- a/css/main.css
+++ b/css/main.css
@@ -108,82 +108,114 @@ img {
     border: none;
     padding: 0;
   }
-  .mobile-burger-icon,
-  .mobile-close-icon {
-    width: 40px;
-    height: 40px;
+  .mobile-burger-btn:hover .mobile-burger-icon,
+  .mobile-close-btn:hover .mobile-close-icon,
+  .mobile-burger-btn:focus .mobile-burger-icon,
+  .mobile-close-btn:focus .mobile-close-icon {
+    fill: var(--accent-color);
   }
-  .mobile-close-btn {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-  }
-  .mobile-menu {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    max-width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    transform: translateX(-150%);
-    background-color: var(--primary-write-color);
-    padding: 48px 40px;
-    transition: var(--duration) var(--timing-function);
-  }
-  .mobile-menu.is-open {
-    transform: translateX(0%);
-  }
-  .mobile-menu-site-item {
-    font-size: 40px;
-    line-height: 1.175;
-    letter-spacing: 0.02em;
-  }
-  .mobile-menu-site-item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-  .mobile-menu-site-link {
-    color: var(--primary-text-color);
-  }
-  .mobile-menu-site-link.current {
-    color: var(--accent-color);
-  }
-  .mobile-menu-auth-item:not(:last-child) {
-    margin-top: 302px;
-    margin-bottom: 32px;
-  }
+}
+
+.mobile-burger-icon,
+.mobile-close-icon {
+  transition: fill var(--duration) var(--timing-function);
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
+.mobile-menu {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  max-width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  transform: translateX(-150%);
+  background-color: var(--primary-write-color);
+  padding: 48px 40px;
+  transition: var(--duration) var(--timing-function);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0%);
+}
+
+.mobile-menu-site-item {
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+}
+
+.mobile-menu-site-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-site-link {
+  color: var(--primary-text-color);
+}
+
+.mobile-menu-site-link.current {
+  color: var(--accent-color);
+}
+
+.mobile-menu-auth-item:not(:last-child) {
+  margin-top: 302px;
+  margin-bottom: 32px;
+}
+
+.mobile-menu-auth-link-tel {
+  color: var(--accent-color);
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+}
+
+.mobile-menu-auth-link-mail {
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+.mobile-menu-social {
+  display: flex;
+  margin-top: 64px;
+}
+
+.mobile-menu-social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+  margin-right: 10px;
+}
+
+.mobile-menu-social-link {
+  font-size: 18px;
+  line-height: 1.222;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.site-nav {
+  display: none;
+}
+
+.auth-nav {
+  display: none;
+}
+
+@media screen and (max-width: 479px) {
   .mobile-menu-auth-link-tel {
-    color: var(--accent-color);
-    font-size: 34px;
-    line-height: 1.176;
-    letter-spacing: 0.02em;
-  }
-  .mobile-menu-auth-link-mail {
-    font-size: 24px;
-    line-height: 1.166;
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
-  }
-  .mobile-menu-social {
-    display: flex;
-    margin-top: 64px;
-  }
-  .mobile-menu-social-item:not(:last-child) {
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-    padding-right: 10px;
-    margin-right: 10px;
+    font-size: 25px;
   }
   .mobile-menu-social-link {
-    font-size: 18px;
-    line-height: 1.222;
-    letter-spacing: 0.02em;
-    color: var(--accent-color);
-  }
-  .site-nav {
-    display: none;
-  }
-  .auth-nav {
-    display: none;
+    font-size: 13px;
   }
 }
 
@@ -580,6 +612,10 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+  .section-specifics {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .command {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -1385,11 +1421,20 @@ img {
 
 @media screen and (max-width: 480px) {
   .modal {
-    max-width: 450px;
+    overflow: auto;
+    max-width: 100vw;
     max-height: 609px;
+    height: 100vh;
   }
   .form {
-    max-width: 450px;
+    max-width: 100%;
+  }
+  .check-label {
+    justify-content: center;
+    font-size: 12px;
+  }
+  .accept {
+    font-size: 12px;
   }
 }
 /*# sourceMappingURL=main.css.map */
