--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -217,14 +217,30 @@
 
 @media screen and (max-width: 480px) {
     .modal {
-        max-width: 450px;
+        overflow: auto;
+        max-width: 100vw;
         max-height: 609px;
+        height: 100vh;
     }
 
     .form {
-        max-width: 450px;
+        max-width: 100%;
+    }
+
+    .check-label {
+        justify-content: center;
+        font-size: 12px;
+    }
+
+    .accept {
+       font-size: 12px;
     }
 }
+
+@media screen and (min-width: 480px) {
+
+}
+
 
 
 
