--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -19,8 +19,17 @@
         padding: 0;
     }
 
+    .mobile-burger-btn:hover .mobile-burger-icon,
+    .mobile-close-btn:hover .mobile-close-icon,
+    .mobile-burger-btn:focus .mobile-burger-icon,
+    .mobile-close-btn:focus .mobile-close-icon {
+        fill: var(--accent-color);
+        }
+    }
+
     .mobile-burger-icon,
     .mobile-close-icon {
+        transition: fill var(--duration) var(--timing-function);
         width: 40px;
         height: 40px;
     }
@@ -93,6 +102,7 @@
         display: flex;
         margin-top: 64px;
     }
+
     .mobile-menu-social-item:not(:last-child) {
         border-right: 1px solid rgba(33, 33, 33, 0.2);
         padding-right: 10px;
@@ -113,6 +123,16 @@
 
     .auth-nav {
         display: none;
+    }
+
+
+
+@media screen and (max-width: 479px) {
+    .mobile-menu-auth-link-tel {
+        font-size: 25px;
+    }
+    .mobile-menu-social-link {
+        font-size: 13px;
     }
 }
 
