--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,6 +5,10 @@ body {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.2;
+
+    &.modal-open {
+        overflow: hidden;
+    }
 }
 
 .list {
