--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -215,9 +215,9 @@
         }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1199px) {
     .modal {
-        overflow: auto;
+        overflow: scroll;
         max-width: 100vw;
         max-height: 609px;
         height: 100vh;
@@ -237,9 +237,6 @@
     }
 }
 
-@media screen and (min-width: 480px) {
-
-}
 
 
 
