--- a/css/main.css
+++ b/css/main.css
@@ -1430,6 +1430,7 @@ img {
   .modal {
     overflow: scroll;
     max-width: 100vw;
+    width: 450px;
     max-height: 609px;
     height: 100vh;
   }
