--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -219,6 +219,7 @@
     .modal {
         overflow: scroll;
         max-width: 100vw;
+        width: 450px;
         max-height: 609px;
         height: 100vh;
     }
