--- a/sass/layout/_overlay.scss
+++ b/sass/layout/_overlay.scss
@@ -1,5 +1,8 @@
   .overlay {
+      max-width: 480px;
       height: 400px;
+      margin-right: auto;
+      margin-left: auto;
       background-image: linear-gradient(to right,
               var(--bg-gradient),
               var(--bg-gradient)),
@@ -16,7 +19,10 @@
 
   @media screen and (min-width: 768px) {
     .overlay {
+      max-width: 768px;
       height: 400px;
+      margin-right: auto;
+      margin-left: auto;
       background-image: linear-gradient(to right,
           var(--bg-gradient),
           var(--bg-gradient)),
@@ -26,6 +32,7 @@
            .overlay {
              background-image: url(../images/images/tablet/hero-tablet@2x.jpg);
              background-size: cover;
+             background-position: center;
            }
         }
     }
@@ -47,6 +54,7 @@
           .overlay {
             background-image: url(../images/images/desktop/hero-desktop@2x.jpg);
             background-size: cover;
+            background-position: center;
           }
         }
     }
