--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -6,15 +6,6 @@
     
 }
 
-@media screen and (max-height: 790px) {
-    .mobile-menu {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-}
-
-
 
 
 
@@ -50,7 +41,11 @@
     }
 
     .mobile-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         position: fixed;
+        overflow: scroll;
         z-index: 1;
         width: 100%;
         max-width: 100vw;
@@ -67,6 +62,11 @@
             transform: translateX(0%);
         }
     }
+
+    .mobile-menu-site-nav {
+        margin-bottom: 32px;
+    }
+
     
    
 
@@ -80,6 +80,7 @@
         margin-bottom: 32px;
     }
 
+    
 
     .mobile-menu-site-link {
         color: var(--primary-text-color);
@@ -90,7 +91,6 @@
     }
 
     .mobile-menu-auth-item:not(:last-child) {
-        margin-top: 302px;
         margin-bottom: 32px;
     }
 
