--- a/sass/layout/_overlay.scss
+++ b/sass/layout/_overlay.scss
@@ -19,8 +19,8 @@
 
   @media screen and (min-width: 768px) {
     .overlay {
-      max-width: 768px;
-      height: 400px;
+      max-width: 100%;
+      height: 100%;
       margin-right: auto;
       margin-left: auto;
       background-image: linear-gradient(to right,
